<resources>
    <string name="app_name">Demo Vinted</string>
    <string name="price">Price: %s €</string>
    <string name="brand">Brand: %s</string>
    <string name="size">Size: %s</string>
    <string name="buy">Buy</string>
    <string name="details">Details</string>
    <string name="items">Items</string>
    <string name="action_retry">Retry</string>
    <string name="search">Search</string>
    <string name="results_error">Results could not be loaded</string>
    <string name="results_empty">No results found for this query</string>
</resources>